# Recommendations_demo

./: .env.local  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  compose.yml  demo.py  download_ga4_data.sh  pyproject.toml
app/: dependencies.py  logger.py  main.py
app/models/: interface.py
app/models/notebooks/: cf-ga4-dfp-memory.ipynb  cf-ml-100k-memory.ipynb
app/routers/: items.py  recommendations.py
notebooks/: cf-ga4-dfp-memory.ipynb  cf-ga4-dfp-model.ipynb
src/rec_demo/: __init__.py
tests/: fixtures.py  mocks.py
tests/routers/: test_recommendations.py
