[project]
name = "rec-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Aaron Brezel", email = "aaronbrezel@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
rec-demo = "rec_demo:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "ruff>=0.11.2",
]
